# dottex

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: codebase-memory-mcp.md
scripts/: check-editor.ts  check-visual.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/.svelte-kit/: ambient.d.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: compile.rs  completion.rs  fs_ops.rs  lib.rs  log_parse.rs  main.rs  project.rs  search.rs  synctex.rs
src/lib/: Editor.svelte  FileTree.svelte  IssueList.svelte  Outline.svelte  PdfViewer.svelte  SearchPanel.svelte  Settings.svelte  Welcome.svelte  editorThemes.ts  i18n.svelte.ts  ipc.ts  latexComplete.ts  latexMath.ts  mathPreview.ts  state.svelte.ts  visualLatex.ts
src/routes/: +page.svelte
