[package]
name = "dottex"
version = "0.2.1"
description = "Editor LaTeX de escritorio: un Overleaf local"
authors = ["dottex contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "dottex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util"] }
notify = "8"
dirs = "6"
regex = "1"
flate2 = "1"
